# SAFELearn

./: .gitignore  Aggregator.py  CMakeLists.txt  Diabetes_prediction_NN.py  Diabetes_prediction_NN_2.py  Dockerfile  Dockerfile_backup  FedAvgModelAggregation.cpp  FedAvgModelAggregationTest.cpp  LICENSE  MNIST_CNN.py  NeuralNetwork.py  PPMI_prediction_NN.py  README.md  SVM_Diabets.py  SVM_trained-model.joblib  SplitGenerator.py  Split_Aggregate.py  Usage.md  UseNewDiabModel.py  UseNewModel.py  webhook-handler.sh
data/: Parkinson_Test_Data.data  source_parkinson
data/Aggregated/: AggregatedModel_A.txt  AggregatedModel_B.txt
data/BioSpecimen/: clean_biospecimen.py
data/MyTestDirSplits/: A_C000.txt  B_C000.txt  global.txt
data/PPMI/: PPMI_cleaned.csv  clean_curated.py  cleaned_2.csv
data/TestExampleSplits/: A_C000.txt  A_C001.txt  B_C000.txt  B_C001.txt  global.txt
input_data/: Prepped_diabetes_data.data  parkinsons_raw.data
input_data/Diabetes2019/: diabetes_dataset__2019.csv
input_data/PPMI/: PPMI_Curated_Data_Cut_Dictionary_20230612.xlsx  PPMI_cleaned_altered.csv  cleaned.csv
model/: GlobalModel  LocalModel
model/PPMI/: Delta_0.txt  Delta_1.txt  Delta_2.txt  GlobalModel.txt  Model_0.txt  Model_1.txt  Model_2.txt
model/PPMImodels/: GlobalModel  Model_0
mpcaggregator/: Aggregator.cpp  MPCAggregator.cpp  MPCAggregator.h
mpcutils/: MPCCircuit.h  MPCConstants.h  MPCIterationCounter.h  MPCParty.h  MPCShare.h
utils/: ClientServerConnector.cpp  ClientServerConnector.h  Constants.h  Utils.cpp  Utils.h
